k8s_yaml/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tschrock52-site
  namespace: tschrock52
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tschrock52-site
  template:
    metadata:
      labels:
        app: tschrock52-site
    spec:
      containers:
      - name: nginx
        image: tschrock52/tschrock52-html-site:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: tschrock52-service
  namespace: tschrock52
spec:
  type: ClusterIP
  selector:
    app: tschrock52-site
  ports:
  - port: 80
    targetPort: 80
