k8s_yaml/tschrock52-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tschrock52-ingress
  namespace: tschrock52
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: www.tschrock52.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tschrock52-service
            port:
              number: 80
